[gd_scene load_steps=7 format=3 uid="uid://xu0vw6sqfoj"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_ckmmn"]
[ext_resource type="Texture2D" uid="uid://cehut48qndavn" path="res://Player/schlem_16x24.png" id="2_oaxwj"]
[ext_resource type="PackedScene" uid="uid://qnnst5q27rpw" path="res://Components/HitboxComponent/hitbox_component.tscn" id="3_w4o2u"]
[ext_resource type="PackedScene" uid="uid://beow4ihk763at" path="res://Components/HealthComponent/health_component.tscn" id="4_5dvvq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1clmu"]
radius = 5.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vavnp"]
size = Vector2(12, 22)

[node name="Player" type="CharacterBody2D"]
collision_mask = 24
script = ExtResource("1_ckmmn")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_oaxwj")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1clmu")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_w4o2u")]
collision_mask = 16
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_vavnp")

[node name="HealthComponent" parent="." instance=ExtResource("4_5dvvq")]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.88

[connection signal="take_knockback" from="HitboxComponent" to="." method="_on_hitbox_component_take_knockback"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
